# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: workflow.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
page_analyzer/: app.py  database.py  parser.py  validator.py
page_analyzer/templates/: base.html  index.html  url_detail.html  urls.html
